[package]
name = "pingora-proxy-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.95"
async-trait = "0.1.86"
opentelemetry = "0.28.0"
opentelemetry-appender-tracing = "0.28.1"
opentelemetry-otlp = { version = "0.28.0", features = ["grpc-tonic"] }
opentelemetry-semantic-conventions = "0.28.0"
opentelemetry_sdk = { version = "0.28.0", features = ["rt-tokio"] }
pingora = { version = "0.4.0", features = ["lb", "openssl"] }
pingora-limits = "0.4.0"
pingora-load-balancing = "0.4.0"
pingora-proxy = "0.4.0"
supports-color = "3.0.2"
tracing = "0.1.41"
tracing-opentelemetry = "0.29.0"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
